* fixed flickering * fixed caret styling

--- a/bundles/runtime/org.eclipse.fx.ui.controls/src/org/eclipse/fx/ui/controls/styledtext/styledtextarea.css
+++ b/bundles/runtime/org.eclipse.fx.ui.controls/src/org/eclipse/fx/ui/controls/styledtext/styledtextarea.css
@@ -16,10 +16,19 @@
 	-fx-background-color: transparent; 
 }
 
+.list-cell:even {
+	-fx-background-color: transparent; 
+}
+
 .list-cell:filled:hover {
 	-fx-background-color: transparent;
 }
 
 .sheet {
 	-fx-cursor: text;
+}
+
+.text-caret {
+	-fx-fill: black;
+	-fx-stroke: black;
 }
